--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,9 @@
 	</scm>
 	<properties>
 		<java.version>11</java.version>
+		<sonar.organization>miguel-agudelo</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.projectKey>Miguel-Agudelo_virtualfaker</sonar.projectKey>
 	</properties>
 	<dependencies>
 		<dependency>
